# devman

./: .gitignore  Cargo.toml  LICENSE  README.md  devman.service  install.sh
.github/workflows/: ci.yml
src/: agent.rs  auth.rs  client.rs  config.rs  context.rs  cost.rs  cron.rs  improve.rs  lib.rs  logging.rs  main.rs  manager.rs  memory.rs  orchestrator.rs  render.rs  types.rs  voice.rs
src/cli/: chat.rs  init.rs  mod.rs  run.rs  serve.rs
src/dashboard/: api.rs  dashboard.html  mod.rs  ws.rs
src/telegram/: api.rs  types.rs
src/tools/: bot_management.rs  claude_code.rs  custom.rs  edit.rs  git.rs  github.rs  improve.rs  memory.rs  mod.rs  patch.rs  read.rs  research.rs  shell.rs  storage.rs  voice.rs  web_fetch.rs  web_search.rs  write.rs
tests/: unit_tests.rs
