[package]
name = "devman"
version = "0.1.0"
edition = "2024"
description = "Lightweight agentic framework for Claude — single binary, no runtime"
license = "MIT"
authors = ["Fergus Kendall"]

[[bin]]
name = "devman"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls", "multipart"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
colored = "2"
base64 = "0.22"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
regex = "1.12.3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
